_site/sql/hive/src/test/resources/ql/src/test/queries/positive/input_testsequencefile.q
FROM src
INSERT OVERWRITE TABLE dest4_sequencefile SELECT src.key, src.value
