_site/sql/hive/src/test/resources/ql/src/test/queries/negative/insert_wrong_number_columns.q
FROM src
INSERT OVERWRITE TABLE dest1 SELECT src.key, src.value, 1 WHERE src.key < 100
